# prec

./: .gitignore  README.md
Dog/: CMakeLists.txt  compile_commands.json
Dog/data/data/fund/fund_history_data/: 000001.csv  000003.csv  000004.csv  000006.csv  000008.csv  000011.csv  000015.csv  000016.csv  000017.csv  000020.csv  000021.csv  000024.csv  000025.csv  000028.csv  000029.csv  000030.csv  000031.csv  000032.csv  000033.csv  000037.csv  000039.csv  000041.csv  000042.csv  000043.csv  000045.csv  000046.csv  000047.csv  000048.csv  000049.csv  000051.csv  000054.csv  000056.csv  000057.csv  000058.csv  000059.csv  000061.csv  000063.csv  000065.csv  000066.csv  000067.csv  (+6412 more)
Dog/data/data/stock/stock_history_data/: .000026.csv.swp
Dog/data/src/data_scrape/: html_parser.py  twitter_scrap.py
Dog/include/: mainwindow.h  stock.h  stocknode.h
Dog/libcsvutils/: CMakeLists.txt  compile_commands.json
Dog/libcsvutils/cmake/: CSVUtilsConfig.cmake
Dog/libcsvutils/include/: csv_utils.h
Dog/libcsvutils/src/: csv_utils.cpp  internal.h
Dog/libcsvutils/test/: CMakeLists.txt  test_csv.cpp
Dog/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stock.cpp  stock.h  stocknode.cpp  stocknode.h
Dog/test/: CMakeLists.txt  test.cpp  teststock.cpp
assembly/: 64  64.asm
cpp_code/: CMakeLists.txt  ProjectConfig.h  ProjectConfig.h.in  a.out  asd  compile_commands.json  main.cpp  test.cpp  test.s
cpp_code/.clangd/index/: main.cpp.2C69DA5B532B189A.idx  work.cpp.7DE0D531BFD4EB5C.idx
cpp_code/a.out.dSYM/Contents/Resources/DWARF/: a.out
cpp_code/cmake_modules/: FindFoo.cmake
cpp_code/src/: CMakeLists.txt  a.out  add.h  constant.h  graph.h  main.cpp  main.cpp.bak  multiply.h  operation.h
cpp_code/test/: CMakeLists.txt  test.cpp
haskell/: baby  hellworld  hellworld.hi  hellworld.hs
latex_code/genetic_composite_optimization_code/.ipynb_checkpoints/: GA_SHARED_FUNCTION_DEMO2-checkpoint.ipynb  GA_SHARED_FUNCTION_DEMO2_SELECTION-checkpoint.ipynb
latex_code/manuscript/: GA-optimization-1.aux  GA-optimization-1.bbl  GA-optimization-1.blg  GA-optimization-1.fdb_latexmk  GA-optimization-1.fls  ga-citation-database.bib  laminate_design.aux  laminate_design.bbl  laminate_design.bib  laminate_design.blg  laminate_design.fdb_latexmk  laminate_design.fls  neural-network-design-database.bib  neural-network-design.aux  neural-network-design.bbl  neural-network-design.blg  neural-network-design.fdb_latexmk  neural-network-design.fls  neural-network-design.tex  pdflatex10135.fls  pdflatex1537.fls  pdflatex20762.fls  selection-method-on-sharing-problem.aux  selection-method-on-sharing-problem.fdb_latexmk  selection-method-on-sharing-problem.fls  watch.sh
latex_code/manuscript/DE_GRUYTER/: PJBR.bst  dg-degruyter.tiff  dgruyter_author.sty  revised_JPE.tex  template_JBR.aux  template_JBR.bbl  template_JBR.bcf  template_JBR.blg  template_JBR.fdb_latexmk  template_JBR.fls  template_JBR.ilg  template_JBR.run.xml  template_JBR.tex
latex_code/manuscript/First_SAI/: main.aux  main.blg  main.fdb_latexmk  main.fls  main.tex  pdflatex74375.fls
latex_code/manuscript/GA/: GA-optimization.bbl  GA-optimization.fdb_latexmk  GA-optimization.fls  (+1 more)
latex_code/presentation/: .symposium.tex.swp  11-30.aux  11-30.fdb_latexmk  11-30.fls  11-30.snm  11-30.tex  2020-11-10-presentation.aux  2020-11-10-presentation.fdb_latexmk  2020-11-10-presentation.fls  2020-11-10-presentation.snm  2020-11-10-presentation.tex  2020-11-29-presentation.aux  2020-11-29-presentation.fdb_latexmk  2020-11-29-presentation.fls  NAS.aux  NAS.bbl  NAS.bcf  NAS.bib  NAS.blg  NAS.fdb_latexmk  NAS.fls  NAS.nav  NAS.tex  presentation.aux  presentation.fdb_latexmk  presentation.fls  presentation.nav  presentation.snm  presentation.tex  symposium.aux  symposium.fdb_latexmk  symposium.fls  symposium.snm  symposium.tex
my_qt/: display.py  template.py  template2.py  view.py  view2.py
my_qt/galois/: GA.py  galois.py  galois_view.py  genetic_algorithm.py
opencv_code/: CMakeLists.txt  compile_commands.json  events.cpp  main.cpp
opencv_code/.clangd/index/: main.cpp.F65A586833F857C5.idx
opencv_code/binary/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  opengl
opengl_code/: CMakeLists.txt  main.cpp  main.cppx
opengl_code/.clangd/index/: main.cpp.3391376558871BD0.idx
opengl_code/binary/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  opengl
python_code/ann/: .valuation2.py.swp  ANN.py  adaboost.py  ann_for_clt.py  configuration  configuration.yaml  configuration_ga.py  data.py  data_processor.py  ga_nn.py  genetic_algorithm.py  individual.py  me.py  net_cell.py  network_architecture.py  network_train_result.txt  network_with_chromosome.py  normalize.csv  normalized.data  plot.py  result_draw.py  test.py  tool.py  tool_ga.py  train.py  train_existed_model.py  trained_mixed_model.py  valuation.py  valuation2.py
python_code/test/: MCMC.py
recent/: constant_variable.py  ga_result.txt  genetic_algorithm.py  genetic_algorithm_thickness.py  individual.py  lamina_failure.py  lamina_mass_and_cost.py  laminate-single-component.py  laminate_multiple_component.py  main.py  main_result.py  plot_pie.py  result_display.py  seed_test.py  selection_method_comparsion_result.py  symmetry_list_operator.py  thickness_main.py  thickness_result_display.py  thickness_three_angle_result.py  thickness_two_angle_result.py  tool.py  train_data_composite_material.csv  train_data_generator.py  train_data_generator3.py
recent/Python-AFSA/: cfish.py  fishmain.py
recent/research/: log.py  main_result.py  main_result_bak.py  plot_pie.py  thickness_three_angle_result.py  thickness_two_angle_max_stress.py  train_data_generator.py  train_data_generator1.py  train_data_generator2.py
shell_code/: test.sh
tensorflow/: mnist_lower.py  tensor_run.py
tensorflow/introduce/: flags.py  intr1.py  intr2.py  intr3.py  intr4.py  intr5.py  intr6.py  intr7.py  ks.py  model
tensorflow/mnist/: net.py  tools.py  train.py  val.py
tensorflow/python/: intr1.py  intr2.py
tex_code/: a.dvi  a.tex
(+1017 files in other folders)
